--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-individual-character-input-boxes",
+  "name": "react-individual-character-input-boxes3",
   "version": "1.1.0",
-  "description": "Simple single character input boxes.",
+  "description": "Simple single character input boxes. Added typefaces from https://github.com/illepic/single-character-input-boxes/tree/feature/types ",
   "main": "dist/ReactIndividualCharacterInputBoxes.js",
   "repository": "https://github.com/dannyradden/single-character-input-boxes",
   "author": "Danny Radden",
